--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,25 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+	ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<form method="post" asp-controller="Room" asp-action="Create">
+	<input id="createRoomId" class="form-control inputs" name="roomId" type="text" placeholder="Room name" />
+	<button type="submit" class="inputs" id="createBtn">Create Room</button>
+</form>
+<form method="post" asp-controller="Room" asp-action="Create">
+	<input id="roomId" class="form-control inputs" name="roomId" type="text" placeholder="Enter room name" />
+	<button class="inputs" type="submit" id="joinBtn">Join Room</button>
+</form>
+
+<div class="lights">
+	<div class="light x1"></div>
+	<div class="light x2"></div>
+	<div class="light x3"></div>
+	<div class="light x4"></div>
+	<div class="light x5"></div>
+	<div class="light x6"></div>
+	<div class="light x7"></div>
+	<div class="light x8"></div>
+	<div class="light x9"></div>
 </div>
